Validation applied on form fields Creating an loop to verify field on focous out on main.js Applying verification to start load animation

--- a/app/src/html/index.html
+++ b/app/src/html/index.html
@@ -19,7 +19,7 @@
             <div class="input-container">
                 <input type="email" name="email" id="email" class="material-input"/>
                 <label for="email">Email</label>
-                <span class="error-message"></span>
+                <span class="error-message" id="email-error"></span>
             </div>
             <div class="input-container">
                 <input type="text" name="cpf" id="cpf" class="material-input"/>
@@ -29,7 +29,7 @@
             <div class="input-container">
                 <input type="tel" required pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$" name="phone" id="phone" class="material-input" />
                 <label for="phone">Telefone</label>
-                <span class="error-message"></span>
+                <span class="error-message" id="phone-error"></span>
             </div>
             <div class="input-container">
                 <input disable type="submit" id="send" class="material-button" value="Cadastrar">
