--- a/app/src/html/index.html
+++ b/app/src/html/index.html
@@ -12,27 +12,27 @@
     <section class="form-section">
         <form>
             <div class="input-container">
-                <input type="text" name="name" id="name" class="material-input"/>
+                <input type="text" required name="name" id="name" class="material-input"/>
                 <label for="name">Nome completo (sem abreviações)</label>
                 <span class="error-message" id="name-error"></span>
             </div>
             <div class="input-container">
-                <input type="email" name="email" id="email" class="material-input"/>
+                <input type="email" required name="email" id="email" class="material-input"/>
                 <label for="email">Email</label>
                 <span class="error-message" id="email-error"></span>
             </div>
             <div class="input-container">
-                <input type="text" name="cpf" id="cpf" class="material-input"/>
+                <input type="text" required name="cpf" id="cpf" class="material-input"/>
                 <label for="cpf">CPF</label>
                 <span class="error-message" id="cpf-error"></span>
             </div>
             <div class="input-container">
-                <input type="tel" required pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$" name="phone" id="phone" class="material-input" />
+                <input type="tel" required name="phone" id="phone" class="material-input" />
                 <label for="phone">Telefone</label>
                 <span class="error-message" id="phone-error"></span>
             </div>
             <div class="input-container">
-                <input disable type="submit" id="send" class="material-button" value="Cadastrar">
+                <input disable type="submit" id="send" class="material-button disabled" value="Cadastrar">
                 <div class="loader" id="loader"></div>
             </div>
         </form>
