Creating list user Adding a helper to create elements

--- a/app/src/html/index.html
+++ b/app/src/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script type="module" src="scripts/main.min.js"></script>
 </head>
-<body>
+<body id="t">
     <section class="form-section">
         <form>
             <div class="input-container">
