--- a/app/src/html/listuser.html
+++ b/app/src/html/listuser.html
@@ -11,7 +11,7 @@
     <body>
         <section class="list-user-section">
             <ul class="list-user" id="list-user">
-                <li class="list-user-item" id="clone-li">
+                <!--<li class="list-user-item" id="clone-li">
                     <div class="user-name-content">
                         <span class="list-text" id="user-name"></span>
                     </div>
@@ -20,7 +20,7 @@
                         <span class="list-text" id="user-cpf"></span>
                         <span class="list-text" id="user-phone"></span>                        
                     </div>
-                </li>
+                </li>-->
             </ul>
         </section>
     </body>
