Adding icon fonts Styling list component Bugfix on button animation Adding default register

--- a/app/src/html/listuser.html
+++ b/app/src/html/listuser.html
@@ -4,12 +4,14 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href="./favicon.png" />
         <link href="styles/styles.css" rel="stylesheet">
         <script type="module" src="scripts/main.min.js"></script>
 
     </head>
     <body>
         <section class="list-user-section">
+            <h1 class="list-user-title">Lista de Usuários</h1>
             <ul class="list-user" id="list-user">
             </ul>
         </section>
