Basic bugfix on event controller

--- a/app/src/html/index.html
+++ b/app/src/html/index.html
@@ -23,12 +23,12 @@
                 <span class="error-message" id="email-error"></span>
             </div>
             <div class="input-container">
-                <input type="text" required name="cpf" id="cpf" class="material-input"/>
+                <input type="text" required name="cpf" maxlength="14" id="cpf" class="material-input"/>
                 <label for="cpf">CPF</label>
                 <span class="error-message" id="cpf-error"></span>
             </div>
             <div class="input-container">
-                <input type="tel" required name="phone" id="phone" class="material-input" />
+                <input type="tel" required name="phone" maxlength="15" id="phone" class="material-input"/>
                 <label for="phone">Telefone</label>
                 <span class="error-message" id="phone-error"></span>
             </div>
